--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
+# React native specific files
+.expo/
+.expo-shared/
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
+
 # zip files
 *.zip
 
