--- a/app.json
+++ b/app.json
@@ -23,6 +23,11 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
+      },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyA5hcQYAQCq2gsMM6_LhYRpt6-eA9WaKaM"
+        }
       }
     },
     "web": {
