--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~41.0.1",
     "expo-secure-store": "~10.1.0",
     "expo-status-bar": "~1.0.4",
+    "js-sha512": "^0.8.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
