:sparkles: add module graph

--- a/app.json
+++ b/app.json
@@ -28,7 +28,8 @@
         "googleMaps": {
           "apiKey": "AIzaSyA5hcQYAQCq2gsMM6_LhYRpt6-eA9WaKaM"
         }
-      }
+      },
+      "package": "emerald.honduran"
     },
     "web": {
       "favicon": "./assets/favicon.png"
