--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
-    "dagre": "^0.8.5",
     "@reduxjs/toolkit": "^1.5.1",
     "@types/i18n-js": "^3.8.1",
+    "dagre": "^0.8.5",
     "expo": "~41.0.1",
     "expo-localization": "~10.1.0",
     "expo-location": "~12.0.4",
@@ -33,8 +33,9 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "react-native-web": "~0.13.12",
+    "react-native-sortable-list": "0.0.24",
     "react-native-svg": "12.1.0",
+    "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0"
   },
