--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/i18n-js": "^3.8.1",
     "dagre": "^0.8.5",
     "expo": "~41.0.1",
+    "expo-image-picker": "~10.1.4",
     "expo-localization": "~10.1.0",
     "expo-location": "~12.0.4",
     "expo-secure-store": "~10.1.0",
