--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-status-bar": "~1.0.4",
     "i18n-js": "^3.8.0",
     "js-sha512": "^0.8.0",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/dagre": "^0.7.44",
+    "@types/lodash": "^4.14.170",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "typescript": "~4.0.0"
