--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dagre": "^0.8.5",
     "expo": "~41.0.1",
     "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "~9.1.0",
     "expo-localization": "~10.1.0",
     "expo-location": "~12.0.4",
     "expo-secure-store": "~10.1.0",
@@ -34,15 +35,15 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.8.1",
-    "react-native-reanimated": "^2.1.0",
+    "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "expo-linear-gradient": "~9.1.0"
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
