--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dagre": "^0.8.5",
     "expo": "~41.0.1",
     "expo-image-picker": "~10.1.4",
+    "expo-linear-gradient": "~9.1.0",
     "expo-localization": "~10.1.0",
     "expo-location": "~12.0.4",
     "expo-secure-store": "~10.1.0",
@@ -41,8 +42,7 @@
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
-    "redux": "^4.1.0",
-    "expo-linear-gradient": "~9.1.0"
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
