--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.4",
     "@reduxjs/toolkit": "^1.5.1",
+    "@types/graphlib": "^2.1.7",
     "@types/i18n-js": "^3.8.1",
-    "dagre": "^0.8.5",
     "expo": "~41.0.1",
     "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
@@ -25,6 +25,7 @@
     "expo-secure-store": "~10.1.0",
     "expo-sensors": "~10.1.2",
     "expo-status-bar": "~1.0.4",
+    "graphlib": "^2.1.8",
     "i18n-js": "^3.8.0",
     "js-sha512": "^0.8.0",
     "lodash": "^4.17.21",
@@ -38,7 +39,9 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "12.1.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
