--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "expo-notifications": "~0.11.6",
+    "expo-constants": "~10.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
