--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/graphlib": "^2.1.7",
     "@types/i18n-js": "^3.8.1",
     "expo": "~41.0.1",
+    "expo-constants": "~10.1.3",
     "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
     "expo-localization": "~10.1.0",
     "expo-location": "~12.0.4",
+    "expo-notifications": "~0.11.6",
     "expo-secure-store": "~10.1.0",
     "expo-sensors": "~10.1.2",
     "expo-status-bar": "~1.0.4",
@@ -33,8 +35,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-gesture-handler": "~1.10.2",
-    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-gifted-chat": "^0.16.3",
+    "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.8.1",
     "react-native-reanimated": "~2.1.0",
@@ -46,9 +48,7 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.0",
-    "expo-notifications": "~0.11.6",
-    "expo-constants": "~10.1.3"
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
