--- a/app.json
+++ b/app.json
@@ -29,7 +29,8 @@
           "apiKey": "AIzaSyA5hcQYAQCq2gsMM6_LhYRpt6-eA9WaKaM"
         }
       },
-      "package": "emerald.honduran"
+      "package": "honduran.emerald",
+      "googleServicesFile": "./google-services.json"
     },
     "web": {
       "favicon": "./assets/favicon.png"
