--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "@react-native-async-storage/async-storage": "^1.13.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
