--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "quest",
-    "slug": "quest",
+    "name": "Hona",
+    "slug": "hona",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
