--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "expo-secure-store": "~10.1.0",
     "expo-sensors": "~10.1.2",
     "expo-status-bar": "~1.0.4",
+    "expo-task-manager": "~9.1.0",
     "graphlib": "^2.1.8",
     "i18n-js": "^3.8.0",
     "js-sha512": "^0.8.0",
