--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.1.0",
-    "@react-native-async-storage/async-storage": "^1.13.0"
+    "@react-native-async-storage/async-storage": "^1.13.0",
+    "expo-image-manipulator": "~9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
