--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-skeleton-content": "^1.0.22",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.16.0",
