--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/graphlib": "^2.1.7",
     "@types/i18n-js": "^3.8.1",
     "expo": "~41.0.1",
+    "expo-blur": "~9.0.3",
     "expo-constants": "~10.1.3",
     "expo-image-manipulator": "~9.1.0",
     "expo-image-picker": "~10.1.4",
