--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/graphlib": "^2.1.7",
     "@types/i18n-js": "^3.8.1",
     "expo": "~41.0.1",
+    "expo-barcode-scanner": "~10.1.2",
     "expo-blur": "~9.0.3",
     "expo-constants": "~10.1.3",
     "expo-image-manipulator": "~9.1.0",
@@ -44,17 +45,21 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.4",
     "react-native-maps": "0.27.1",
     "react-native-paper": "^4.8.1",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
     "react-native-skeleton-content": "^1.0.22",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.16.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "expo-sharing": "~9.1.2",
+    "expo-file-system": "~11.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
