--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-barcode-scanner": "~10.1.2",
     "expo-blur": "~9.0.3",
     "expo-constants": "~10.1.3",
+    "expo-file-system": "~11.0.2",
     "expo-image-manipulator": "~9.1.0",
     "expo-image-picker": "~10.1.4",
     "expo-linear-gradient": "~9.1.0",
@@ -30,6 +31,7 @@
     "expo-notifications": "~0.11.6",
     "expo-secure-store": "~10.1.0",
     "expo-sensors": "~10.1.2",
+    "expo-sharing": "~9.1.2",
     "expo-status-bar": "~1.0.4",
     "expo-task-manager": "~9.1.0",
     "graphlib": "^2.1.8",
@@ -51,15 +53,13 @@
     "react-native-screens": "~3.0.0",
     "react-native-skeleton-content": "^1.0.22",
     "react-native-step-indicator": "^1.0.3",
-    "react-native-svg": "^12.1.0",
+    "react-native-svg": "12.1.0",
     "react-native-tab-view": "^2.16.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.4",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22",
-    "redux": "^4.1.0",
-    "expo-sharing": "~9.1.2",
-    "expo-file-system": "~11.0.2"
+    "redux": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
